add firebase, add login logout feature

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "4.6.0",
+    "firebase": "^8.7.1",
     "formik": "^2.2.9",
     "jquery": "^3.6.0",
     "phone": "^2.4.22",
@@ -26,7 +27,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "dev": "react-scripts start",
+    "dev": "sh -ac '. ./.env; react-scripts start'",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
